--- a/app/website/games.html
+++ b/app/website/games.html
@@ -40,7 +40,7 @@
           <div class="d-flex flex-column flex-md-row flex-fill align-items-stretch align-items-md-center">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="./#">
+                <a class="nav-link" href="./games.html">
                   <span class="nav-link-icon d-md-none d-lg-inline-block">
                     <!-- Download SVG icon from http://tabler-icons.io/i/star -->
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-123" width="24"
@@ -55,7 +55,7 @@
                     </svg>
                   </span>
                   <span class="nav-link-title">
-                    Scores
+                    Games
                   </span>
                 </a>
               </li>
@@ -114,116 +114,9 @@
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
-            <p>The score and payment tracking app used by only the most elite volleyball teams.</p>
+            <p><a href="add_game.html" class="btn btn-sm btn-primary">Add Game</a></p>
           </div>
-          <div class="row row-cards">
-          <div class="col">
-            <div class="card">
-              <div class="table-responsive">
-                <table class="table table-vcenter card-table">
-                  <thead>
-                    <tr>
-                      <th>Name</th>
-                      <th>Title</th>
-                      <th>Email</th>
-                      <th>Role</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>Paweł Kuna</td>
-                      <td class="text-muted">
-                        UI Designer, Training
-                      </td>
-                      <td class="text-muted"><a href="#" class="text-reset">paweluna@howstuffworks.com</a></td>
-                      <td class="text-muted">
-                        User
-                      </td>
 
-                    </tr>
-                    <tr>
-                      <td>Jeffie Lewzey</td>
-                      <td class="text-muted">
-                        Chemical Engineer, Support
-                      </td>
-                      <td class="text-muted"><a href="#" class="text-reset">jlewzey1@seesaa.net</a></td>
-                      <td class="text-muted">
-                        Admin
-                      </td>
-
-                    </tr>
-                    <tr>
-                      <td>Mallory Hulme</td>
-                      <td class="text-muted">
-                        Geologist IV, Support
-                      </td>
-                      <td class="text-muted"><a href="#" class="text-reset">mhulme2@domainmarket.com</a></td>
-                      <td class="text-muted">
-                        User
-                      </td>
-
-                    </tr>
-                    <tr>
-                      <td>Dunn Slane</td>
-                      <td class="text-muted">
-                        Research Nurse, Sales
-                      </td>
-                      <td class="text-muted"><a href="#" class="text-reset">dslane3@epa.gov</a></td>
-                      <td class="text-muted">
-                        Owner
-                      </td>
-
-                    </tr>
-                    <tr>
-                      <td>Emmy Levet</td>
-                      <td class="text-muted">
-                        VP Product Management, Accounting
-                      </td>
-                      <td class="text-muted"><a href="#" class="text-reset">elevet4@senate.gov</a></td>
-                      <td class="text-muted">
-                        Admin
-                      </td>
-
-                    </tr>
-                    <tr>
-                      <td>Maryjo Lebarree</td>
-                      <td class="text-muted">
-                        Civil Engineer, Product Management
-                      </td>
-                      <td class="text-muted"><a href="#" class="text-reset">mlebarree5@unc.edu</a></td>
-                      <td class="text-muted">
-                        User
-                      </td>
-
-                    </tr>
-                    <tr>
-                      <td>Egan Poetz</td>
-                      <td class="text-muted">
-                        Research Nurse, Engineering
-                      </td>
-                      <td class="text-muted"><a href="#" class="text-reset">epoetz6@free.fr</a></td>
-                      <td class="text-muted">
-                        Admin
-                      </td>
-
-                    </tr>
-                    <tr>
-                      <td>Kellie Skingley</td>
-                      <td class="text-muted">
-                        Teacher, Services
-                      </td>
-                      <td class="text-muted"><a href="#" class="text-reset">kskingley7@columbia.edu</a></td>
-                      <td class="text-muted">
-                        Owner
-                      </td>
-
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
         </div>
       </div>
     </div>
