--- a/app/website/index.html
+++ b/app/website/index.html
@@ -40,7 +40,7 @@
           <div class="d-flex flex-column flex-md-row flex-fill align-items-stretch align-items-md-center">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="./#">
+                <a class="nav-link" href="./games.html">
                   <span class="nav-link-icon d-md-none d-lg-inline-block">
                     <!-- Download SVG icon from http://tabler-icons.io/i/star -->
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-123" width="24"
@@ -55,7 +55,7 @@
                     </svg>
                   </span>
                   <span class="nav-link-title">
-                    Scores
+                    Games
                   </span>
                 </a>
               </li>
@@ -105,7 +105,7 @@
           <div class="row g-2 align-items-center">
             <div class="col">
               <h2 class="page-title">
-                Scores
+                Overview
               </h2>
             </div>
           </div>
