basic version of add game working

--- a/app/website/add_game.html
+++ b/app/website/add_game.html
@@ -163,7 +163,7 @@
                           <div class="input-group-text form-control-sm">Team 1:</div>
                         </div>
                         <input class="form-control form-control-sm score-selector" name="Team1Score" type="tel"
-                          name="Team1Score" />
+                          id="Team1Score" />
                       </div>
                     </div>
                     <div class="col">
@@ -218,9 +218,8 @@
                   <button type="button" class="btn btn-primary" id="save">Save</button>
                 </div>
               </div>
+              <input type="hidden" name="SerializedTeams" id="SerializedTeams" />
             </form>
-
-            <pre id="results" />
 
           </div>
         </div>
