--- a/app/website/add_game.html
+++ b/app/website/add_game.html
@@ -36,6 +36,12 @@
       padding: 0 .25rem;
       margin: 0;
     }
+
+    .hidden {
+      display:none;
+    }
+
+
   </style>
 </head>
 
@@ -215,7 +221,7 @@
 
               <div class="row form-group">
                 <div class="col">
-                  <button type="button" class="btn btn-primary" id="save">Save</button>
+                  <button type="button" class="btn btn-primary" id="save">Save</button><img src="loading.gif" class="hidden" id="loadingImage" />
                 </div>
               </div>
               <input type="hidden" name="SerializedTeams" id="SerializedTeams" />
