--- a/app/website/index.html
+++ b/app/website/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>VolleyBill</title>
   <link rel="stylesheet" href="css/tabler.min.css">
