finishes add payment

--- a/app/website/add_payment.html
+++ b/app/website/add_payment.html
@@ -10,14 +10,6 @@
   <link rel="stylesheet" href="css/tabler.min.css">
   <link rel="stylesheet" href="css/style.css">
   <style>
-   
-
-    /* remove drop down arrow from select */
-    select.form-control {
-      -moz-appearance: none;
-      -webkit-appearance: none;
-      appearance: none;
-    }
 
     .input-group .input-group-text {
       width: 100%;
@@ -110,8 +102,7 @@
         <div class="container-xl">
           <img src="loading.gif" id="loadingImagePage" />
           <div class="row row-cards">
-            <!-- <form id="scoreForm" class="hidden"> -->
-            <form id="scoreForm">
+            <form id="scoreForm" class="hidden">
               <div class="row">
                 <div class="col">
                   <label for="GameDate">Payment Date</label>
@@ -123,13 +114,13 @@
                   <label for="Payer">Payer</label>
                   <select class="form-control" name="Payer" id="Payer" aria-describedby="Payer">
                     <option value="" selected="" disabled="" hidden="">Select Player</option>
-                  <option value="Chris">Chris</option><option value="Bert">Bert</option><option value="Keith">Keith</option><option value="Mehmet">Mehmet</option><option value="J.T.">J.T.</option><option value="Tony">Tony</option><option value="David">David</option><option value="Jake">Jake</option><option value="Tad">Tad</option><option value="Josh">Josh</option><option value="Ray">Ray</option><option value="Charles">Charles</option><option value="Eric">Eric</option><option value="PK">PK</option><option value="Jeff">Jeff</option><option value="Elson">Elson</option><option value="Nick">Nick</option><option value="Justin">Justin</option><option value="Paul">Paul</option><option value="Bill">Bill</option><option value="Mako">Mako</option><option value="Jim">Jim</option><option value="Kishore">Kishore</option><option value="Jacob">Jacob</option><option value="CC">CC</option><option value="Brett">Brett</option><option value="Tony L">Tony L</option><option value="Jenn">Jenn</option></select>
+                  </select>
                 </div>
                 <div class="col">
                   <label for="Payee">Payee</label>
                   <select class="form-control" name="Payee" id="Payee" aria-describedby="Payee">
                     <option value="Force Sports">Force Sports</option>
-                  <option value="Chris">Chris</option><option value="Bert">Bert</option><option value="Keith">Keith</option><option value="Mehmet">Mehmet</option><option value="J.T.">J.T.</option><option value="Tony">Tony</option><option value="David">David</option><option value="Jake">Jake</option><option value="Tad">Tad</option><option value="Josh">Josh</option><option value="Ray">Ray</option><option value="Charles">Charles</option><option value="Eric">Eric</option><option value="PK">PK</option><option value="Jeff">Jeff</option><option value="Elson">Elson</option><option value="Nick">Nick</option><option value="Justin">Justin</option><option value="Paul">Paul</option><option value="Bill">Bill</option><option value="Mako">Mako</option><option value="Jim">Jim</option><option value="Kishore">Kishore</option><option value="Jacob">Jacob</option><option value="CC">CC</option><option value="Brett">Brett</option><option value="Tony L">Tony L</option><option value="Jenn">Jenn</option></select>
+                  </select>
                 </div>
                 <div class="col">
                   <label for="Amount">Amount</label>
