--- a/app/website/payments.html
+++ b/app/website/payments.html
@@ -125,10 +125,10 @@
                   <table class="table table-vcenter card-table">
                     <thead>
                       <tr>
-                        <th>Name</th>
-                        <th>Games Won</th>
-                        <th>Games Lost</th>
-                        <th>Game Win %</th>
+                        <th>Payer</th>
+                        <th>Payee</th>
+                        <th>Amount</th>
+                        <th>Payment Date</th>
                       </tr>
                     </thead>
                     <tbody id="statsBody"></tbody>
