update display of data

--- a/app/website/payments.html
+++ b/app/website/payments.html
@@ -126,9 +126,7 @@
                     <thead>
                       <tr>
                         <th>Payer</th>
-                        <th>Payee</th>
-                        <th>Amount</th>
-                        <th>Payment Date</th>
+                        <th>Total Amount Paid</th>
                       </tr>
                     </thead>
                     <tbody id="statsBody"></tbody>
