--- a/app/website/login.html
+++ b/app/website/login.html
@@ -106,7 +106,7 @@
           <div class="row g-2 align-items-center">
             <div class="col">
               <h2 class="page-title">
-                Add Payment
+                Login
               </h2>
             </div>
           </div>
@@ -114,46 +114,28 @@
       </div>
       <div class="page-body">
         <div class="container-xl">
-          <img src="loading.gif" id="loadingImagePage" />
           <div class="row row-cards">
-            <form id="scoreForm" class="hidden">
+            <form id="loginForm">
               <div class="row">
-                <div class="col">
-                  <label for="GameDate">Payment Date</label>
-                  <input type="date" class="form-control" name="PaymentDate" id="PaymentDate" aria-describedby="PaymentDate">
+                <div class="col col-3">
+                  <label for="Email">Email</label>
+                  <input type="email" class="form-control" name="Email" id="Email" aria-describedby="Email">
                 </div>
               </div>
               <div class="row">
-                <div class="col">
-                  <label for="Payer">Payer</label>
-                  <select class="form-control" name="Payer" id="Payer" aria-describedby="Payer">
-                    <option value="" selected="" disabled="" hidden="">Select Player</option>
-                  </select>
-                </div>
-                <div class="col">
-                  <label for="Payee">Payee</label>
-                  <select class="form-control" name="Payee" id="Payee" aria-describedby="Payee">
-                    <option value="Force Sports">Force Sports</option>
-                  </select>
-                </div>
-                <div class="col">
-                  <label for="Amount">Amount</label>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">$</span>
-                    </div>
-                    <input type="number" class="form-control" aria-label="Amount" name="Amount" id="Amount" value="30" pattern="^((\d+)|(\d{1,3})(\,\d{3}|)*)(\.\d{2}|)$">
-                  </div>
+                <div class="col col-3">
+                  <label for="Password">Password</label>
+                  <input type="password" class="form-control" name="Password" id="Password" aria-describedby="Password">
                 </div>
               </div>
 
               <div class="row form-group">
                 <div class="col">
-                  <button type="button" class="btn btn-primary" id="save">Save</button><img src="loading.gif" class="hidden" id="loadingImage" />
+                  <button type="button" class="btn btn-primary" id="login">Login</button><img src="loading.gif" class="hidden" id="loadingImage" />
                 </div>
               </div>
             </form>
-
+            <div id="success" class="hidden">You have successfully been logged in.</div>
           </div>
         </div>
       </div>
@@ -162,7 +144,7 @@
   <script src="scripts/tabler.min.js"></script>
   <script src="scripts/ajax.min.js"></script>
   <script src="scripts/dragdroptouch.js"></script>
-  <script src="scripts/add_payment.js"></script>
+  <script src="scripts/login.js"></script>
 </body>
 
 </html>
