adjust form widths

--- a/app/website/login.html
+++ b/app/website/login.html
@@ -117,13 +117,13 @@
           <div class="row row-cards">
             <form id="loginForm">
               <div class="row">
-                <div class="col col-3">
+                <div class="col-md-6">
                   <label for="Email">Email</label>
                   <input type="email" class="form-control" name="Email" id="Email" aria-describedby="Email">
                 </div>
               </div>
               <div class="row">
-                <div class="col col-3">
+                <div class="col-md-6">
                   <label for="Password">Password</label>
                   <input type="password" class="form-control" name="Password" id="Password" aria-describedby="Password">
                 </div>
