--- a/app/website/payments.html
+++ b/app/website/payments.html
@@ -103,7 +103,7 @@
               </h2>
             </div>
             <!-- Page title actions -->
-            <div class="col-auto ms-auto d-print-none">
+            <div class="col-auto ms-auto d-print-none hidden" id="AddPayment">
               <div class="btn-list">
                 <a href="add_payment.html" class="btn btn-primary d-none d-sm-inline-block">
                   <!-- Download SVG icon from http://tabler-icons.io/i/plus -->
