add payments credit column

--- a/app/website/payments.html
+++ b/app/website/payments.html
@@ -131,6 +131,7 @@
       </div>
       <div class="page-body">
         <div class="container-xl">
+          <div><p id="costPerGame"></p></div>
           <img src="loading.gif" id="loadingImage" />
           <div  id="statsTable" class="row row-cards hidden">
             <div class="col-sm-12">
@@ -141,6 +142,8 @@
                       <tr>
                         <th>Payer</th>
                         <th>Total Amount Paid</th>
+                        <th>Days Played</th>
+                        <th>Credit</th>
                       </tr>
                     </thead>
                     <tbody id="statsBody"></tbody>
