fix sorting and display

--- a/app/website/index.html
+++ b/app/website/index.html
@@ -140,8 +140,8 @@
                     <thead>
                       <tr>
                         <th>Name</th>
-                        <th>Games Won</th>
-                        <th>Games Lost</th>
+                        <th>Wins</th>
+                        <th>Losses</th>
                         <th>Game Win %</th>
                       </tr>
                     </thead>
