--- a/app/website/payments.html
+++ b/app/website/payments.html
@@ -141,7 +141,7 @@
                     <thead>
                       <tr>
                         <th>Payer</th>
-                        <th>Total Amount Paid</th>
+                        <th>Amount Paid</th>
                         <th>Days Played</th>
                         <th>Credit</th>
                       </tr>
