update dashboard sort

--- a/app/website/index.html
+++ b/app/website/index.html
@@ -133,6 +133,7 @@
         <div class="container-xl">
           <img src="loading.gif" id="loadingImage" />
           <div  id="statsTable" class="row row-cards hidden">
+            <div><p>Players with more than 10 games sorted by game win percentage. Other players sorted by total wins.</p></div>
             <div class="col-sm-12">
               <div class="card">
                 <div class="table-responsive">
