add point diffs to stats

--- a/app/website/index.html
+++ b/app/website/index.html
@@ -159,6 +159,8 @@
                         <th>Wins</th>
                         <th>Losses</th>
                         <th>Game Win %</th>
+                        <th>Tot. Pt. Diff.</th>
+                        <th>Avg. Pt. Diff.</th>
                       </tr>
                     </thead>
                     <tbody id="statsBody"></tbody>
