add scorer page

--- a/app/website/scorer.html
+++ b/app/website/scorer.html
@@ -128,7 +128,7 @@
           <div class="row g-2 align-items-center">
             <div class="col">
               <h2 class="page-title">
-                Wisdom
+                Vision Scorer
               </h2>
             </div>
           </div>
@@ -137,7 +137,12 @@
       <!-- Page body -->
       <div class="page-body">
         <div class="container-xl d-flex flex-column justify-content-center">
-            <p class="empty-title text-muted col-12" style="font-size:72px; line-height:normal"><em id="quote"></em></p>
+            <p class="empty-title text-muted col-12">Latest code available on <a href="https://github.com/bertwagner/volleybill/blob/main/ml/notebooks/" target="_blank">GitHub</a></p>
+            <p> 
+              <video width="722" controls>
+              <source src="content/output.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video> </p>
           </div>
         </div>
       </div>
